--- a/css/style.css
+++ b/css/style.css
@@ -512,6 +512,9 @@ section{
     #menu-btn{
         display: initial;
     }
+    section#contact {
+        min-height: 0;
+    }
 
 }
 
@@ -524,6 +527,9 @@ section{
     .header{
         width:100%;
         border-right: 0;
+    }
+    section#contact {
+        min-height: 0;
     }
 
 }
